# demo-gn-ninja

./: .gn  BUILD.gn  GN Build 101.pptx  README.md
helloservice/: BUILD.gn  say_hello.cc
lib/: BUILD.gn  hello.cc
