group("all") {
  deps = [
    ":hello",
    "//helloservice:hello2",
  ]
}

executable("hello") {
  sources = [ "hello_world.cc" ]
}

# build as .dll
shared_library("hello2_shared") {
  sources = [
    "lib/hello.cc",
    "lib/hello.h",
  ]
  configs += [ "lib:two_people" ]
}
# static_library("hello_static") {
#   sources = [
#     "hello_static.cc",
#     "hello_static.h",
#   ]
# }
